syntax = "proto3";

package user;

service User {
  rpc RegistUser(UserRequest) returns (UserResponse) {}
}

message UserRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
}

message UserResponse {
  string message = 1;
}
